# remote-secrets

./: .gitignore  README.md  pyproject.toml
remote_secrets/: __main__.py  exceptions.py  types.py
remote_secrets/cli/: aws.py  gcp.py
remote_secrets/providers/: _base.py  aws.py  base.py  gcp.py  k8s.py
