[tool.poetry]
name = "remote-secrets"
version = "1.0.0"
description = "Easily read and manage remote secrets using Python"
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"
include = [
    { path = "remote_secrets", format = ["sdist", "wheel"] },
]
keywords = [
    "secrets",
    "aws",
    "gcp",
    "vault",
    "kubernetes",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jjpaulo2/remote-secrets/issues"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.158"
google-cloud-secret-manager = "^2.20.2"
google-cloud-resource-manager = "^1.12.5"
google-auth = "^2.34.0"
grpcio = "1.60.0"
pykube-ng = "^23.6.0"
typer = "^0.12.4"
rich = "^13.7.1"

[tool.poetry.extras]
aws = ["boto3"]
gcp = ["google-auth", "google-cloud-secret-manager", "google-cloud-resource-manager", "grpcio"]
k8s = ["pykube-ng"]
cli = ["typer", "rich"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
mypy = "^1.11.1"
taskipy = "^1.13.0"
ruff = "^0.6.8"
botocore-stubs = "^1.35.30"
boto3-stubs = "^1.35.30"

[tool.taskipy.tasks]
tests = { cmd = "pytest", help = "Runs all unit tests" }
lint = { cmd = "ruff format && ruff check --fix", help = "Format and lint the code" }
security = { cmd = "bandit -c pyproject.toml -r fastrpa", help = "Check security issues on the code" }
check = { cmd = "ruff format --check && ruff check && mypy .", help = "Check code issues" }
clear = { cmd = "rm -rf **/.mypy* **/.ruff* **/__pycache__", help = "Clear cache files" }
docs = { cmd = "mkdocs serve", help = "Run mkdocs website" }

[tool.mypy]
python_version = "3.10"
disable_error_code = [
    "import-untyped"
]
exclude = [
    "debug(.*)\\.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
